test/bad/parse/InstanceImport.hs
module InstanceImport where

instance MyClass MyData where
    import Bad